# tarmac

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pycorner.py  pyproject.toml  setup.py  test_data.csv
pycorner/: __init__.py  pycorner.py
pycorner/testing/: extra_data.npy  tests.py
tarmac/: __init__.py  tarmac.py
tarmac/testing/: tests.py
tarmac/tests/: test_tarmac.py
testing/: extra_data_0  extra_data_1  extra_data_2  extra_data_3
