[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "tarmac"
dynamic = ["version"]
authors = [
  { name="Peyton Murray", email="peynmurray@gmail.com" },
]
description = "Tools for processing and visualization markov chain samples"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.8",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/peytondmurray/tarmac"

[tool.setuptools]
packages = ["tarmac"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8 naming
    "N",
    # pydocstyle
    "D",
    # annotations
    "ANN",
    # debugger
    "T10",
    # flake8-pytest
    "PT",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # flake8-fixme
    "FIX",
    # flake8-eradicate
    "ERA",
    # pandas-vet
    "PD",
    # numpy-specific rules
    "NPY",
]
ignore = [
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "D211", # No blank line before class
    "D213", # Multiline summary second line
    "PD901", # Avoid using 'df' for pandas dataframes. Perfectly fine in functions with limited scope
    "ANN101", # Missing type annotation for `self`
    "ANN204", # Missing return type annotation for special method
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "D105", # Missing docstring in magic method
    "D203", # 1 blank line before after class docstring
    "D204", # 1 blank line required after class docstring
    "D413", # 1 blank line after parameters
    "SIM108", # Simplify if/else to one line; not always clearer
    "D206", # Advised to disable by ruff-format
    "E501", # Advised to disable by ruff-format
    "W191", # Advised to disable by ruff-format
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # Unused import
]
"test_*.py" = [
    "ANN001", # Type annotations aren't needed for tests; these are fixtures or parametrizations
    "ANN201" # Ignore return type annotations
]

[project.optional-dependencies]
dev = ["pre-commit>=3.6.0", "ruff-lsp", "python-lsp-server", "pytest"]
build = ["setuptools", "setuptools_scm", "build"]

[tool.setuptools_scm]

[tool.isort]
profile = "black"
